[gd_scene load_steps=15 format=3 uid="uid://dvb7enmue4od6"]

[ext_resource type="Script" path="res://Scripts/dave_arms.gd" id="1_tuprl"]
[ext_resource type="Texture2D" uid="uid://dqx70uykmhu27" path="res://assets/davidbeefcake-Sheet.png" id="2_xyc8y"]
[ext_resource type="Script" path="res://Scripts/test.gd" id="3_abpr1"]
[ext_resource type="Texture2D" uid="uid://dpejld556bj5r" path="res://assets/davidbeefcakewalk-Sheet.png" id="3_v3b51"]
[ext_resource type="FontFile" uid="uid://cxejajx6eiwb8" path="res://assets/Fonts/PixelOperator8.ttf" id="4_3axqa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dl20t"]
atlas = ExtResource("2_xyc8y")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_x02n6"]
atlas = ExtResource("3_v3b51")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy84r"]
atlas = ExtResource("3_v3b51")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_6equo"]
atlas = ExtResource("3_v3b51")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_htyq7"]
atlas = ExtResource("3_v3b51")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjq3y"]
atlas = ExtResource("3_v3b51")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyxfj"]
atlas = ExtResource("3_v3b51")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_ohghf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl20t")
}],
"loop": true,
"name": &"Idl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x02n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy84r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6equo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htyq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjq3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyxfj")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvdhy"]
size = Vector2(67, 20)

[node name="DaveArms" type="Container"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tuprl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(20, 22)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_ohghf")
animation = &"Idl"
autoplay = "Idl"
frame_progress = 0.934272
flip_h = true

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(60, 25)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_abpr1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-25.5, -1)
shape = SubResource("RectangleShape2D_mvdhy")

[node name="CoinCost" type="Area2D" parent="."]

[node name="Cost" type="Label" parent="CoinCost"]
offset_left = -12.0
offset_top = 35.0
offset_right = 28.0
offset_bottom = 58.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3axqa")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
